[metadata]
name = xlsx2csv
author = Dilshod Temirkhdojaev
author_email = tdilshod@gmail.com
description = xlsx to csv converter
url = http://github.com/dilshod/xlsx2csv
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.4
    Programming Language :: Python :: 2.5
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Office/Business
    Topic :: Utilities

[options]
py_modules = xlsx2csv

[options.entry_points]
console_scripts =
    xlsx2csv = xlsx2csv:main
